--- a/client/app/app.less
+++ b/client/app/app.less
@@ -15,7 +15,14 @@
     padding: 0.2em 0;
 }
 
+.voting-frame-container {
+  margin: 0 auto;
+  text-align: center  
+}
+
 // injector
+@import 'directives/register/register.less';
 @import 'main/main.less';
+@import 'restaurant/restaurant.less';
 @import 'modal/modal.less';
 // endinjector
