--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -1,7 +1,3 @@
-.thing-form {
-  margin: 20px 0;
-}
-
 #banner {
     border-bottom: none;
     margin-top: -20px;
@@ -15,7 +11,7 @@
 
 .hero-unit {
     position: relative;
-    padding: 30px 15px;
+    padding: 50px 15px;
     color: #F5F5F5;
     text-align: center;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
@@ -31,4 +27,9 @@
 
 .navbar-text {
     margin-left: 15px;
+}
+
+.register-button-container {
+  margin: 0 auto;
+  text-align: center;  
 }
