--- a/client/components/modal/modal.html
+++ b/client/components/modal/modal.html
@@ -4,7 +4,20 @@
 </div>
 <div class="modal-body">
   <p ng-if="modal.text" ng-bind="modal.text"></p>
+
   <div ng-if="modal.html" ng-bind-html="modal.html"></div>
+  <div ng-if="modal.registration">
+    <div class="container">
+      <div class="form-group">
+        <label for="lastName">Last Name:</label>
+        <input name="lastName" type="text" placeholder="Type your last name..."/>
+      </div>
+      <div class="form-group">
+        <label for="partySize">Party Size:</label>
+        <input name="partySize" type="number" />
+      </div>
+    </div>
+  </div>
 </div>
 <div class="modal-footer">
   <button ng-repeat="button in modal.buttons" ng-class="button.classes" ng-click="button.click($event)" ng-bind="button.text" class="btn"></button>
