--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -32,4 +32,8 @@
 .register-button-container {
   margin: 0 auto;
   text-align: center;  
+  button {
+    padding: 2% 15%;
+    font-size: 36px;  
+  }  
 }
